[package]
name = "db185"
description = "Support for Berkeley DB 1.85"
version = "0.2.0"
authors = ["Jonathan Perkin <jonathan@perkin.org.uk>"]
keywords = ["berkeleydb", "pkgsrc"]
license = "ISC"
repository = "https://github.com/jperkin/db185"
homepage = "https://github.com/jperkin/db185"
documentation = "https://docs.rs/db185"
readme = "README.md"
rust-version = "1.85.1"
edition = "2024"
exclude = [
    "tests/data/",
    "tools/",
]

[dependencies]
memmap2 = "0.9.10"
thiserror = "2.0.18"

[dev-dependencies]
anyhow = "1.0.102"
tempfile = "3.27.0"
zstd = "0.13.3"
